[package]
name = "macros"
description = "Macros for a bevy game"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["Troels \"Sheepyhead\" Jessen"]
homepage = "https://github.com/Sheepyhead"
repository = "https://github.com/Sheepyhead/tactical-rpg"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "1.1"